update SuccessfulConsentRatio response format
