# docs/swagger.yaml
@@ -1,4 +1,14 @@
 definitions:
+  controllers.ConsentRatioResponse:
+    properties:
+      date:
+        type: string
+      merchants:
+        description: Updated to reference repositories package
+        items:
+          $ref: '#/definitions/repositories.ConsentRatioData'
+        type: array
+    type: object
   controllers.LoginRequest:
     properties:
       api_key:
@@ -22,6 +32,15 @@ definitions:
       range:
         type: string
     type: object
+  repositories.ConsentRatioData:
+    properties:
+      merchantId:
+        type: integer
+      successfulConsents:
+        type: integer
+      totalClients:
+        type: integer
+    type: object
 info:
   contact: {}
   description: This is the API for fetching client, KYC request, and ServiceProvider
@@ -29,7 +48,7 @@ info:
   title: Client, KYCRequest, and ServiceProvider API
   version: "1.0"
 paths:
-  /api/ServiceProvider/SuccessfulConsentRatioController:
+  /api/ServiceProvider/SuccessfulConsentRatio:
     get:
       description: Get successful consent ratios by day, week, or month
       parameters:
@@ -42,8 +61,9 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            items:
+              $ref: '#/definitions/controllers.ConsentRatioResponse'
+            type: array
         "400":
           description: error
           schema:
